zouhour updates fel 5effa - bismilleh

--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -22,9 +22,9 @@
               <li class="nav-item">
                   <a class="nav-link"  routerLink="/sessions">Sessions</a>
               </li>
-            <li class="nav-item">
+            <!-- <li class="nav-item">
                 <a class="nav-link"  routerLink="/reserver">RESERVER</a>
-            </li>
+            </li> -->
               <li><a class="nav-link" routerLink="/restaurant-list">Restaurant</a></li>
               <li><a class="nav-link" routerLink="/plat-list">Plats</a></li>
               <li><a class="nav-link" routerLink="/favorites">Favorite Plans</a></li>
