--- a/src/app/coaches-list/coaches-list.component.html
+++ b/src/app/coaches-list/coaches-list.component.html
@@ -48,7 +48,7 @@
                             <td>{{ coach.lastName }}</td>
                             <td>{{ coach.adresse }}</td>
                             <td>{{ coach.phoneNumber }}</td>
-                            <td>zid spécialité fl entité </td>
+                            <td>{{ coach.Speciality }}</td>
                             
                           </tr>
                         </tbody>
