--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -1,117 +1,95 @@
 <nav class="navbar navbar-expand-lg">
   <div class="container-fluid">
-      <a class="navbar-brand" href="#">
-          <img src="./../assets/img/logo.png" alt="Logo">
-      </a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-              aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-              <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="#">Home</a>
-              </li>
-              <li class="nav-item">
+    <a class="navbar-brand" href="#">
+      <img src="./../assets/img/logo.png" alt="Logo">
+    </a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="#">Home</a>
+        </li>
+        <li class="nav-item">
 
-                  <a class="nav-link" routerLink="/product">Products</a>
-              </li>
-              <li class="nav-item">
-                  <a class="nav-link" routerLink="/coaches">Coaches</a>
-              </li>
-              <li class="nav-item">
-                  <a class="nav-link"  routerLink="/sessions">Sessions</a>
-              </li>
-            <!-- <li class="nav-item">
-                <a class="nav-link"  routerLink="/reserver">RESERVER</a>
-            </li> -->
-              <li><a class="nav-link" routerLink="/restaurant-list">Restaurant</a></li>
-              <li><a class="nav-link" routerLink="/plat-list">Plats</a></li>
-              <li><a class="nav-link" routerLink="/favorites">Favorite Plans</a></li>
-              <li class="nav-item">
-                  <a class="nav-link"routerLink="/panier">
-                    <i class="bi bi-cart"></i> <!-- Icone de panier -->
-                    Panier <!-- Texte du lien -->
-                  </a>
-              </li>
-              <li class="nav-item">
-                  <a class="nav-link" href="#">Pages</a>
-              </li>
-              <li class="nav-item">
-                  <a class="nav-link" href="#">Contact</a>
-              </li>
-            <li class="nav-item">
-            <a *ngIf="!isLoggedIn" class="nav-link" routerLink="/sign-in" routerLinkActive="active">
-              <i class="bi bi-box-arrow-in-right me-1"></i>Sign In
-            </a>
-            <a *ngIf="isLoggedIn" class="nav-link" (click)="logout()">
-              <i class="bi bi-box-arrow-right me-1"></i>Sign Out
-            </a>
-          </li>
-            <li class="nav-item" *ngIf="isLoggedIn">
-              <a
-                class="nav-link"
-                (click)="navigateToProfile()"
-                routerLinkActive="active"
-              >
-                <i class="bi bi-person me-1"></i>Profile
-              </a>
-            </li>
+          <a class="nav-link" routerLink="/product">Products</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/coaches">Coaches</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/sessions">Sessions</a>
+        </li>
+        <!-- <li class="nav-item">
+            <a class="nav-link"  routerLink="/reserver">RESERVER</a>
+        </li> -->
+        <li><a class="nav-link" routerLink="/restaurant-list">Restaurant</a></li>
+        <li><a class="nav-link" routerLink="/plat-list">Plats</a></li>
+        <li><a class="nav-link" routerLink="/favorites">Favorite Plans</a></li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/panier">
+            <i class="bi bi-cart"></i> <!-- Icone de panier -->
+            Panier <!-- Texte du lien -->
+          </a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/add-reclamation">
+            <i class="bi bi-cart"></i> <!-- Icone de panier -->
+            Reclamation <!-- Texte du lien -->
+          </a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/categorie">
+            <i class="bi bi-cart"></i> <!-- Icone de panier -->
+            Category <!-- Texte du lien -->
+          </a>
+        </li>
+        <li class="nav-item" *ngIf="isLoggedIn">
+          <a
+            class="nav-link"
+            (click)="navigateToProfile()"
+            routerLinkActive="active">
+            <i class="bi bi-person me-1"></i>Profile
+          </a>
+        </li>
+        <li class="nav-item">
+          <a *ngIf="!isLoggedIn" class="nav-link" routerLink="/sign-in" routerLinkActive="active">
+            <i class="bi bi-box-arrow-in-right me-1"></i>Sign In
+          </a>
+          <a *ngIf="isLoggedIn" class="nav-link" (click)="logout()">
+            <i class="bi bi-box-arrow-right me-1"></i>Sign Out
+          </a>
+        </li>
+      </ul>
+      <div id="mobile-menu-wrap"></div>
+      <div class="canvas-social">
+        <a href="#"><i class="fa fa-facebook"></i></a>
+        <a href="#"><i class="fa fa-twitter"></i></a>
+        <a href="#"><i class="fa fa-youtube-play"></i></a>
+        <a href="#"><i class="fa fa-instagram"></i></a>
+      </div>
 
+      <!-- Social media icons -->
+      <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+        <li class="nav-item">
+          <a class="nav-link" href="#"><i class="bi bi-search"></i></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#"><i class="bi bi-facebook"></i></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#"><i class="bi bi-twitter"></i></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#"><i class="bi bi-youtube"></i></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#"><i class="bi bi-instagram"></i></a>
+        </li>
+      </ul>
 
-          </ul>
-
-            <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                <li class="nav-item">
-                    <a class="nav-link" routerLink="/add">
-                        <i class="bi bi-cart"></i> <!-- Icone de panier -->
-                       add product <!-- Texte du lien -->
-                    </a>
-                </li>
-            </ul>
-        <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-          <li class="nav-item">
-            <a class="nav-link" routerLink="/add-reclamation">
-              <i class="bi bi-cart"></i> <!-- Icone de panier -->
-              add reclamation <!-- Texte du lien -->
-            </a>
-          </li>
-        </ul>
-        <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-          <li class="nav-item">
-            <a class="nav-link" routerLink="/categorie">
-              <i class="bi bi-cart"></i> <!-- Icone de panier -->
-              add Category <!-- Texte du lien -->
-            </a>
-          </li>
-        </ul>
-        <div id="mobile-menu-wrap"></div>
-        <div class="canvas-social">
-          <a href="#"><i class="fa fa-facebook"></i></a>
-          <a href="#"><i class="fa fa-twitter"></i></a>
-          <a href="#"><i class="fa fa-youtube-play"></i></a>
-          <a href="#"><i class="fa fa-instagram"></i></a>
-        </div>
-
-          <!-- Social media icons -->
-          <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-              <li class="nav-item">
-                  <a class="nav-link" href="#"><i class="bi bi-search"></i></a>
-              </li>
-              <li class="nav-item">
-                  <a class="nav-link" href="#"><i class="bi bi-facebook"></i></a>
-              </li>
-              <li class="nav-item">
-                  <a class="nav-link" href="#"><i class="bi bi-twitter"></i></a>
-              </li>
-              <li class="nav-item">
-                  <a class="nav-link" href="#"><i class="bi bi-youtube"></i></a>
-              </li>
-              <li class="nav-item">
-                  <a class="nav-link" href="#"><i class="bi bi-instagram"></i></a>
-              </li>
-          </ul>
-
-        </div>
     </div>
+  </div>
 </nav>
