--- a/src/app/reservations/reservations.component.html
+++ b/src/app/reservations/reservations.component.html
@@ -1,6 +1,6 @@
 
 <div id="main-container">
-  <h2>Reservations Works!</h2>
+  <h2>Book your private session with your favourite coach!</h2>
   <form [formGroup]="reservationForm" (ngSubmit)="onSubmit()">
     <div class="form-group">
       <label for="seanceId">Séance</label>
